// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIButton/> adds minwidth when we need it to, for short buttons 1`] = `
<button
  className="xui-button xui-button-main xui-button-medium xui-button-min-loader-width"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  75px
</button>
`;

exports[`<XUIButton/> does retain layout checks with a myriad of combinations 1`] = `
<button
  className="xui-button xui-button-main xui-button-medium"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  Hello, I am a long bit of text
</button>
`;

exports[`<XUIButton/> does retain layout checks with a myriad of combinations 2`] = `
<button
  className="xui-button xui-button-main xui-button-medium xui-button-is-disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={null}
  tabIndex={-1}
  type="button"
>
  <div
    className="xui-button-hidden-content"
  >
    Hello, I am a long bit of text
  </div>
  <div
    aria-label="Loading"
    className="xui-loader xui-loader-small xui-button--loader xui-loader-retain-layout"
    role="progressbar"
  >
    <div
      className="xui-loader--dot"
    />
    <div
      className="xui-loader--dot"
    />
    <div
      className="xui-loader--dot"
    />
  </div>
</button>
`;

exports[`<XUIButton/> does retain layout checks with a myriad of combinations 3`] = `
<button
  className="xui-button xui-button-main xui-button-medium xui-button-is-disabled"
  disabled={true}
  onClick={[Function]}
  onKeyDown={null}
  tabIndex={-1}
  type="button"
>
  <div
    aria-label="Loading"
    className="xui-loader xui-loader-small xui-button--loader"
    role="progressbar"
  >
    <div
      className="xui-loader--dot"
    />
    <div
      className="xui-loader--dot"
    />
    <div
      className="xui-loader--dot"
    />
  </div>
</button>
`;

exports[`<XUIButton/> renders an icon or caret when the appropriate prop is received 1`] = `
<button
  className="xui-button xui-button-standard xui-button-medium xui-button-has-icon"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  <div
    className="xui-button--lefticon xui-iconwrapper xui-iconwrapper-medium"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={17}
      viewBox="0 0 15 17"
      width={15}
    >
      <path
        d="M6.032 14.826a6.324 6.324 0 0 1-3.12-1.823l-.984.568c-.433.25-1.11.076-1.355-.348l-.49-.848c-.244-.424-.056-1.098.377-1.348l.974-.562A6.626 6.626 0 0 1 1.138 8.5c0-.654.094-1.286.27-1.882L.46 6.071c-.433-.25-.621-.924-.377-1.348l.49-.848c.244-.424.922-.598 1.355-.348l.924.534a6.328 6.328 0 0 1 3.18-1.887V1c0-.5.49-1 .979-1h.978c.49 0 .98.5.98 1v1.174a6.328 6.328 0 0 1 3.179 1.887l.924-.534c.433-.25 1.11-.076 1.355.348l.49.848c.244.424.056 1.098-.377 1.348l-.948.547a6.63 6.63 0 0 1 .27 1.882 6.6 6.6 0 0 1-.296 1.965l.974.562c.433.25.621.924.377 1.348l-.49.848c-.244.424-.922.598-1.355.348l-.983-.568a6.324 6.324 0 0 1-3.12 1.823V16c0 .5-.49 1-.98 1h-.978c-.49 0-.98-.5-.98-1v-1.174zM7.5 11.5c1.622 0 2.937-1.343 2.937-3s-1.315-3-2.937-3c-1.622 0-2.937 1.343-2.937 3s1.315 3 2.937 3z"
        role="presentation"
      />
    </svg>
  </div>
  Settings
</button>
`;

exports[`<XUIButton/> renders an icon or caret when the appropriate prop is received 2`] = `
<button
  className="xui-button xui-button-standard xui-button-medium xui-button-has-icon"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  Link to elsewhere
  <div
    className="xui-button--righticon xui-iconwrapper xui-iconwrapper-medium"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={12}
      viewBox="0 0 12 12"
      width={12}
    >
      <path
        d="M10.75 2.75L7 6.5 5.5 5l3.75-3.75L8 0h4v4l-1.25-1.25zM6 0v1H1v10h10V6h1v4.91c0 .545-.5 1.09-1 1.09H1c-.5 0-1-.545-1-1.09l.01-9.82C0 .546.5 0 1 0h5z"
        role="presentation"
      />
    </svg>
  </div>
</button>
`;

exports[`<XUIButton/> renders an icon or caret when the appropriate prop is received 3`] = `
<button
  className="xui-button xui-button-standard xui-button-medium xui-button-has-icon"
  disabled={false}
  onClick={[Function]}
  tabIndex={0}
  type="button"
>
  I’m a dropdown trigger
  <div
    className="xui-button--caret xui-iconwrapper xui-iconwrapper-medium"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={5}
      viewBox="0 0 10 5"
      width={10}
    >
      <path
        d="M0 0l5 5 5-5z"
        role="presentation"
      />
    </svg>
  </div>
</button>
`;
